--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <main class="main">
             <div class="container">
-                <h1>Hola soy el título</h1>
+                <h1>EcuaGreen</h1>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus fuga nulla
                     magni deleniti ratione adipisci unde sapiente enim iusto eos et deserunt,
